# mcp-langgraph-agents

./: .dockerignore  .gitignore  DOCKER_TESTING.md  Dockerfile  LICENSE  README.md  ROUTING_GUIDE.md  docker-compose.yml  dummy  main.py  pyproject.toml  requirements.txt  test_docker.sh  test_interactive.py  test_routing.py
files/: aapl-2025092710k.html  eqqq_poc_property_graph_schema_v0_2.json
mcp_langgraph_agents/: graph.py  server.py
src/: main.py  ocr test.py
src/agents/: document_ingestor.py  risk_analyzer.py
src/mcp_langgraph_agents/: __init__.py  graph.py  server.py
src/mcp_langgraph_agents.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/mcp_server/: server.py  test.py
tests/: kg comparison.xlsx  test_interactive.py  test_routing.py
